Bug 1132656 - Reader mode toolbar overlaps content if window becomes too narrow. r=jaws
UltraBlame original commit: a03a128298b07d090f15ab7d7c31291cb40e9bbc

--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -75,6 +75,49 @@ margin
 auto
 ;
 }
+media
+(
+max
+-
+width
+:
+785px
+)
+{
+body
+{
+padding
+-
+top
+:
+64px
+;
+-
+moz
+-
+padding
+-
+end
+:
+0
+;
+padding
+-
+bottom
+:
+64px
+;
+-
+moz
+-
+padding
+-
+start
+:
+51px
+;
+}
+}
 body
 .
 loaded
